# odoo-docker-image

./: .envrc  .gitignore  Dockerfile  OCB_requirements.txt  README.md  entrypoint.sh  pyproject.toml
etc/: locale.gen
etc/nginx/sites-available/: odoo.conf
etc/odoo/: odoo.conf
etc/sudoers.d/: odoo
etc/supervisor/conf.d/: nginx.conf
